--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
-url=jdbc:postgresql://localhost:5432/dep12_first_project
-username=postgres
-password=523325
+app.url=jdbc:postgresql://localhost:5432/dep12_first_project
+app.username=postgres
+app.password=523325
